update tomcat8 config with settings per SUITE-1808